Fixed code snippet color, font, spacing, structure

--- a/frontend/src/components/ui/code-snippet/CodeSnippet.css
+++ b/frontend/src/components/ui/code-snippet/CodeSnippet.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro&display=swap');
+
 h1 {
+    font-family: 'Readex Pro', sans-serif;
     padding-bottom: 20px;
-    padding-top: 10px;
+    padding-top: 50px;
     text-align: center;
+}
+
+.component {
+    background-color: #d3fef4;
 }
 
 .languages {
@@ -16,6 +23,7 @@ h1 {
 }
 
 .description {
+    font-family: 'Readex Pro', sans-serif;
     background-color: black;
     border-radius: 25px;
     border-style: solid;
@@ -25,4 +33,8 @@ h1 {
     margin-left: 30%;
     margin-right: 30%;
     white-space: pre-wrap;
+}
+
+.bottom {
+    height: 70px;
 }
